# SlicerCBCTToothSegmentation

./: CMakeLists.txt  LICENSE.txt  README.md
CBCTToothSegmentation/: CBCTToothSegmentation.py  CMakeLists.txt
CBCTToothSegmentation/Resources/UI/: CBCTToothSegmentation.ui
